@@ -16,6 +16,7 @@ Version 0.4c
  - EnemySkills replaced: Scorpion, Orchid, Gol, Corishev
  - All tease skills replaced
  - All black magic replaced
+ - Most healing spells replaced
 * Kyna is locked to debug mode. I'll leave her where she is for now, but she's likely going to be removed at some point in the future.
 
 --------------------------------------------
